Fix for long data (overflow: auto)

--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,12 @@ html, body{
     color: red;
 }
 
-pre {outline: 1px solid #ccc; padding: 5px; }
+pre {
+    outline: 1px solid #ccc;
+    padding: 5px;
+    scroll: auto;
+}
+
 .string { color: green; }
 .number { color: darkorange; }
 .boolean { color: blue; }
